stable working app with rockylinux

--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,13 +1,14 @@
 # Webserver Dockerfile
 
-FROM debian:bookworm-slim
+FROM rockylinux:9.3
 
-RUN apt-get update && \
-    apt-get install -y \
-    nginx \
-    php8.2 \
-    php8.2-mysqlnd \
-    php8.2-fpm
+RUN yum install epel-release -y && \
+	yum update -y && \
+	yum install -y \
+	nginx \
+	php \
+	php-mysqlnd \
+	php-fpm
 
 COPY webfiles/ /var/www/html
 
@@ -19,7 +20,7 @@ COPY configfiles/docker-entrypoint.sh /
 
 RUN rm -f /var/www/html/index.html /var/www/html/nginx-logo.png /var/www/html/poweredby.png  && \
 	chmod +x /docker-entrypoint.sh && \
-	addgroup nginx && adduser --system --no-create-home --ingroup nginx --shell /bin/sh nginx && \
+	# addgroup nginx && adduser --system --no-create-home --ingroup nginx --shell /bin/sh nginx && \
     chown nginx:nginx /var/www/html/*.php 
 
 
