--- a/webserver/configfiles/www.conf
+++ b/webserver/configfiles/www.conf
@@ -9,7 +9,7 @@
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-# listen = /run/php-fpm/www.sock
+; listen = /run/php-fpm/www.sock
 listen = 127.0.0.1:9000
 
 ; Set listen(2) backlog. A value of '-1' means unlimited.
@@ -37,9 +37,9 @@ listen.group = nginx
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = apache 
+user = nginx 
 ; RPM: Keep a group allowed to write in log dir.
-group = apache 
+group = nginx 
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
