--- a/webserver/configfiles/nginx.conf
+++ b/webserver/configfiles/nginx.conf
@@ -57,8 +57,7 @@ http {
         }
 	location ~ \.php$ {
         try_files $uri =404;
-        # fastcgi_pass unix:/run/php-fpm/www.sock;
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass unix:/run/php-fpm/www.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
