--- a/webserver/configfiles/php-fpm.conf
+++ b/webserver/configfiles/php-fpm.conf
@@ -2,6 +2,5 @@
 # network or unix domain socket configuration
 
 upstream php-fpm {
-        # server unix:/run/php-fpm/www.sock;
-        server 127.0.0.1:9000;
+        server unix:/run/php-fpm/www.sock;
 }
