few security updates with seccomp

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DB_PATH="dbserver"
 WEB_PATH="webserver"
 DB_IP="203.0.113.201"
 DB_HOSTNAME="db.cyber23.test"
+DB_USERNAME="wwwclient23"
 DB_ROOT_PASSWORD="CorrectHorseBatteryStaple"
 DB_DATABASE="csvs23db"
 WEB_SERVER_PORT="80"
