--- a/dbserver/Dockerfile
+++ b/dbserver/Dockerfile
@@ -1,9 +1,8 @@
-# Database Dockerfile
+# Database Dockerfile 
 
-FROM mariadb:10.11
+# avoid using "latest" tag unless needed, as this will create confusion with the running version number 
+FROM mariadb:10.11 
 
 COPY mysqld.cnf  /mysql/mysql.conf.d/mysqld.cnf
 
-EXPOSE 3306
-
-USER mysql
+# EXPOSE 3306
