--- a/dbserver/mysqld.cnf
+++ b/dbserver/mysqld.cnf
@@ -23,10 +23,10 @@
 pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
 datadir		= /var/lib/mysql
-#log-error	= /var/log/mysql/error.log
+log-error	= /var/log/mysql/error.log
 # By default we only accept connections from localhost
 bind-address	= 0.0.0.0
 # Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
+# symbolic-links=0
 
 default-auth=mysql_native_password
