--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,11 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    healthcheck:
+      test: ["CMD-SHELL", "healthcheck.sh --su-mysql --connect --innodb_initialized || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   csvs_webserver:
     image: ${SID}_${WEB_NAME}_i
@@ -69,6 +74,11 @@ services:
         max-file: "3"
     secrets:
       - db_password 
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
       
 secrets:
   db_password:
