--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
         limits:
           cpus: '0.2'
           memory: 512M
-          pids: 15
+          # pids: 15
     logging:
       driver: "json-file"
       options:
@@ -86,7 +86,7 @@ services:
         limits:
           cpus: '0.1'
           memory: 100M
-          pids: 30
+          # pids: 30
     logging:
       driver: "json-file"
       options:
