--- a/.github/workflows/name: Docker_Compose.yml
+++ b/.github/workflows/name: Docker_Compose.yml
@@ -22,3 +22,4 @@ jobs:
       - name: Build and push Docker Compose services
         run: |
           docker-compose build
+          docker-compose push
