--- a/kubectl_yml/csvs-webserver-deployment.yaml
+++ b/kubectl_yml/csvs-webserver-deployment.yaml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: csvs-webserver
+  labels:
+    app: csvs-webserver
+spec:
+  ports:
+    - port: 80
+  selector:
+    app: csvs-webserver
+    tier: frontend
+  type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,8 +40,9 @@ spec:
         io.kompose.service: csvs-webserver
     spec:
       containers:
-        - image: u5577491_csvs_webserver_i
+        - image: u5577491_csvs_webserver_i:1.5
           name: u5577491-csvs-webserver-c
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
               hostPort: 80
@@ -37,15 +52,15 @@ spec:
               cpu: 100m
               memory: "104857600"
           volumeMounts:
-            - mountPath: /run/secrets/db_password
-              name: db_password
-      hostname: www.cyber23.test
+            - mountPath: /run/secrets/db-password
+              name: db-password
+      hostname: wwwcyber23test
       restartPolicy: Always
       volumes:
-        - name: db_password
+        - name: db-password
           secret:
             items:
-              - key: db_password
-                path: db_password
-            secretName: db_password
+              - key: db-password
+                path: db-password
+            secretName: db-password
 status: {}
