--- a/kubectl_yml/csvs_dbserver-service.yaml
+++ b/kubectl_yml/csvs_dbserver-service.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: csvs-dbserver
-  name: csvs_dbserver
+  name: csvs-dbserver
   namespace: default
 spec:
   ports:
