--- a/kubectl_yml/csvs_webserver-service.yaml
+++ b/kubectl_yml/csvs_webserver-service.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: csvs-webserver
-  name: csvs_webserver
+  name: csvs-webserver
   namespace: default
 spec:
   ports:
