--- a/kubectl_yml/db-password-secret.yaml
+++ b/kubectl_yml/db-password-secret.yaml
@@ -1,11 +1,21 @@
 apiVersion: v1
 data:
-  db_password: d3d3Y2xpZW50MjNDcmVkcwo=
+  db-password: d3d3Y2xpZW50MjNDcmVkcwo=
 kind: Secret
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: db_password
+    io.kompose.service: db-password
   name: db-password
   namespace: default
 type: Opaque
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: db-root-password
+  namespace: default
+type: Opaque
+data:
+  password: Q29ycmVjdEhvcnNlQmF0dGVyeVN0YXBsZQ== 
